# tek97

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
data/fonts/: test.font
data/maps/: t1.map  test2.map  test3.map
data/textures/: font.tga  grid.tga
shaders/: basic.glsl  billboard.glsl  geometry.glsl  material.glsl  meshbuffer.glsl  shape.glsl  sprite.glsl  utils.glsl
src/: main.cpp  tek_application.cpp  tek_application.hpp  tek_debug_overlay.hpp
src/core/: tek_core.hpp  tek_input.cpp  tek_input.hpp  tek_keys.cpp  tek_keys.hpp  tek_memory.cpp  tek_memory.hpp  tek_stopwatch.cpp  tek_stopwatch.hpp  tek_types.hpp
src/drawing/: tek_billboard.cpp  tek_billboard.hpp  tek_camera.cpp  tek_camera.hpp  tek_color.cpp  tek_color.hpp  tek_drawing.cpp  tek_drawing.hpp  tek_font.cpp  tek_font.hpp  tek_framebuffer.cpp  tek_framebuffer.hpp  tek_geometry.cpp  tek_geometry.hpp  tek_image.cpp  tek_image.hpp  tek_image_tga.cpp  tek_light.cpp  tek_light.hpp  tek_material.cpp  tek_material.hpp  tek_mesh.cpp  tek_mesh.hpp  tek_meshbuffer.cpp  tek_meshbuffer.hpp  tek_rect.cpp  tek_rect.hpp  tek_shader.cpp  tek_shader.hpp  tek_shape.cpp  tek_shape.hpp  tek_shapebuffer.cpp  tek_shapebuffer.hpp  tek_skeletal_mesh.cpp  tek_skeletal_mesh.hpp  tek_skeleton.cpp  tek_skeleton.hpp  tek_spritebatch.cpp  tek_spritebatch.hpp  tek_texture.cpp  (+3 more)
src/game/: tek_assets.cpp  tek_assets.hpp  tek_brush.cpp  tek_console.cpp  tek_console.hpp  tek_editor.cpp  tek_editor.hpp  tek_game.cpp  tek_game.hpp  tek_map.cpp  tek_map.hpp  tek_meshbrowser.cpp  tek_meshbrowser.hpp  tek_quad.cpp  tek_terrain.cpp  tek_terrain.hpp  tek_texturebrowser.cpp  tek_texturebrowser.hpp
src/math/: tek_collision.cpp  tek_collision.hpp  tek_mat4.cpp  tek_mat4.hpp  tek_math.hpp  tek_math_functions.cpp  tek_math_functions.hpp  tek_noise.cpp  tek_noise.hpp  tek_quat.cpp  tek_quat.hpp  tek_transform.cpp  tek_transform.hpp  tek_vec2.cpp  tek_vec2.hpp  tek_vec3.cpp  tek_vec3.hpp  tek_vec4.cpp  tek_vec4.hpp
src/platform/: gl_functions.inl  tek_input.cpp  tek_input.hpp  tek_iwindow.hpp  tek_keys.cpp  tek_keys.hpp  tek_platform.hpp  tek_win32_clock.cpp  tek_win32_window.cpp
src/platform/linux/: tek_linux_clock.cpp  tek_linux_opengl.cpp  tek_linux_window.cpp  tek_linux_window.hpp
src/platform/win32/: tek_win32_clock.cpp  tek_win32_opengl.cpp  tek_win32_window.cpp
